Making compatible for Windows OS